update controller and service for handle file upload from client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=user-service
 spring.config.import=configserver:http://localhost:8888
+upload.directory=C:/Users/hasratp/OneDrive - Aditi Consulting/Documents/Banking Application/UserUpload
