--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=user-service
 spring.config.import=configserver:http://localhost:8888
 upload.directory=C:/Users/hasratp/OneDrive - Aditi Consulting/Documents/Banking Application/UserUpload
+spring.messages.basename=message
