Add Brave + micrometer

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=user-service
 spring.config.import=configserver:http://localhost:8888
 upload.directory=C:/Users/hasratp/OneDrive - Aditi Consulting/Documents/Banking Application/UserUpload
 spring.messages.basename=message
+management.tracing.sampling.probability=1.0
